<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_lists"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_item_title_my_lists" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_item_title_favorites" />
        <item
            android:id="@+id/nav_specials"
            android:icon="@drawable/ic_list_add"
            android:title="@string/nav_item_title_specials" />
        <item
            android:id="@+id/nav_scan_barcode"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_item_title_scan_barcode" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_item_title_logout" />
    </group>
</menu>
