<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintVertical_weight="2"
    tools:context="com.t3.android.awesomeshopping.InviteActivity">

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="@dimen/qr_size"
        android:layout_height="@dimen/qr_size"
        android:layout_gravity="center"
        android:focusableInTouchMode="true"
        android:contentDescription="@string/content_description_qr_code_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/screen_message_padding"
        app:layout_anchor="@id/qr_code"
        app:layout_anchorGravity="top|center"
        style="@style/AppTheme.secondary_text.medium"
        android:text="@string/invite_message"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        app:srcCompat="@drawable/ic_menu_share"
        android:onClick="share"
        android:focusable="true"
        android:contentDescription="@string/content_description_share_qr_code"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:focusable="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:focusableInTouchMode="true"
        android:contentDescription="@string/content_description_advertisement"
        ads:adSize="@string/adSize"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</android.support.design.widget.CoordinatorLayout>
