<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.t3.android.awesomeshopping.SpecialsActivity">

    <TextView
        android:id="@+id/no_items_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/no_special_item_hint"
        style="@style/AppTheme.primary_text.medium"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/items_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/ad_height"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager">
    </android.support.v7.widget.RecyclerView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:focusableInTouchMode="true"
        android:contentDescription="@string/content_description_advertisement"
        ads:adSize="@string/adSize"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        app:srcCompat="@drawable/ic_add"
        android:onClick="addSpecial"
        android:focusable="true"
        android:contentDescription="@string/content_description_add_new_special_item"/>

</android.support.design.widget.CoordinatorLayout>
