<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.t3.android.awesomeshopping.ListDetailsActivity">

    <include layout="@layout/content_list_details_normal" />
    <include layout="@layout/content_list_details_edit" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:focusableInTouchMode="true"
        android:contentDescription="@string/content_description_advertisement"
        ads:adSize="@string/adSize"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:focusable="true"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        app:srcCompat="@drawable/ic_edit"
        android:onClick="edit"
        android:contentDescription="@string/content_description_start_edit_mode"/>

</android.support.design.widget.CoordinatorLayout>
